--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ numpy==1.24.3
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.1
+pip==23.2.1
 protobuf==4.24.1
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
@@ -38,6 +39,7 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 safetensors==0.3.2
+setuptools==65.5.0
 six==1.16.0
 tensorboard==2.13.0
 tensorboard-data-server==0.7.1
@@ -51,4 +53,5 @@ transformers==4.31.0
 typing_extensions==4.5.0
 urllib3==1.26.16
 Werkzeug==2.3.7
+wheel==0.41.1
 wrapt==1.15.0
